# template-securite-python

./: .gitignore  README.md  pyproject.toml
shellcodes/: shellcode_easy.txt  shellcode_hard.txt  shellcode_medium.txt
src/tp1/: main.py
src/tp1/utils/: capture.py  lib.py  report.py
src/tp2/: main.py
src/tp2/utils/: analyzer.py  config.py
src/tp3/: main.py
src/tp3/utils/: captcha.py  session.py
src/tp4/: main.py
src/tp4/utils/: config.py  decoder.py  solver.py
tests/tp2/utils/: test_analyzer.py
tests/tp3/utils/: test_captcha.py  test_session.py
tests/tp4/utils/: test_decoder.py  test_solver.py
